--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,8 @@ button:focus { outline: none; }
 #zoom-in
 {
 
-
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
     width: 30px;
     height: 30px;
     background-color: #fff;
@@ -91,6 +92,9 @@ button:focus { outline: none; }
 
 #zoom-out
 {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom: none;
     border-top-style: solid;
     border-width: 1px;
     border-color: #eee;
