--- a/css/style.css
+++ b/css/style.css
@@ -74,33 +74,46 @@ button:focus { outline: none; }
     opacity: 0.9;
 }
 
+.leaflet-bar
+{
+    box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+    border-radius: 4px;
+}
+
 #zoom-in
 {
-
+    box-shadow: 0 1px 5px rgba(0,0,0,0.65);
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
-    width: 30px;
-    height: 30px;
+    border: 1px solid #999;
+    width: 26px;
+    height: 26px;
     background-color: #fff;
     z-index: 999;
-    position: absolute;top:420px;
+    position: absolute; top:420px;
     margin-left: 20px;
     cursor: pointer;
     text-align: center;
+    font-size: 20px;
 
+}
+
+#zoom-in:hover, #zoom-out:hover
+{
+    background-color: #eee;
 }
 
 #zoom-out
 {
+
+    box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+    font-size:20px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-bottom: none;
-    border-top-style: solid;
-    border-width: 1px;
-    border-color: #eee;
-    padding-top: 5px;
-    width: 30px;
-    height: 25px;
+    border: 1px solid #999;
+    width: 26px;
+    height: 26px;
+    line-height: 26px;
     background-color: #fff;
     z-index: 999;
     position: absolute;top: 445px;
