--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ button:focus { outline: none; }
 }
 
 .container #map{
-    width: 970px; height: 600px; margin-left: auto; margin-right: auto;
+    width: 970px; height: 600px; margin-left: auto; margin-right: auto; margin-top: 20px;
 }
 
 .container .chart-title{font-size: 24px; font-weight: 700; padding-left: 35px;
@@ -90,7 +90,7 @@ button:focus { outline: none; }
     height: 26px;
     background-color: #fff;
     z-index: 999;
-    position: absolute; top:420px;
+    position: absolute; top:720px;
     margin-left: 20px;
     cursor: pointer;
     text-align: center;
@@ -116,7 +116,7 @@ button:focus { outline: none; }
     line-height: 26px;
     background-color: #fff;
     z-index: 999;
-    position: absolute;top: 445px;
+    position: absolute;top: 745px;
     margin-left: 20px;
     cursor: pointer;
     text-align: center;
@@ -124,4 +124,25 @@ button:focus { outline: none; }
 
 #title{color:black;font-weight: 700;}
 #content{font-size: 15px; color:grey;}
+
+
+.chart-container
+{
+    z-index: -5;
+   width: 100%;
+   height: 300px;
+}
+.his-chart
+{
+    display: inline-block;
+    width: 440px;
+    height: 300px;
+}
+
+.rank-chart
+{
+    display: inline-block;
+    width: 440px;
+    height: 300px;
+}
 
