--- a/css/style.css
+++ b/css/style.css
@@ -132,8 +132,10 @@ button:focus { outline: none; }
    width: 100%;
    height: 300px;
 }
+
 .his-chart
 {
+    padding-left: 60px;
     display: inline-block;
     width: 440px;
     height: 300px;
