--- a/css/style.css
+++ b/css/style.css
@@ -102,23 +102,25 @@ button:focus { outline: none; }
 .chart-container
 {
     z-index: -5;
-   width: 100%;
-   height: 300px;
+   width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+   height: 280px;
 }
 
 .his-chart
 {
-    padding-left: 60px;
+    padding:0 0 0 100px;
     display: inline-block;
-    width: 440px;
-    height: 300px;
+    width: 380px;
+    height: 280px;
 }
 
 .rank-chart
 {
     display: inline-block;
-    width: 440px;
-    height: 300px;
+    width: 380px;
+    height: 280px;
 }
 
 .msg
