--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body
     right: 0;
     margin-top:70px;
     margin-right: 25px;
-    z-index: 999;
+    z-index: 0;
     width: 100%
     height: 200px;
     opacity: 0.9;
@@ -46,9 +46,9 @@ body
 
 .rank-chart
 {
-    display: inline-block;
     width: 300px;
     height: 200px;
+    margin-top:-60px;
 }
 
 
@@ -167,7 +167,7 @@ svg
 .home
 {
     height: 100vh;
-    background: url("../images/bg2.jpg") no-repeat center center;
+    background: url("../images/bg1.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -206,7 +206,7 @@ svg
 .brief-container
 {
     width: 45vw;
-    height: 65vh;
+    height: 45vh;
     position: absolute;
     bottom: 0vh;
     left: 7vw;
