loading new style

--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ svg
 .home
 {
     height: 100vh;
-    background: url("../images/bg1.jpg") no-repeat center center;
+    background: url("../images/bg3.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -205,17 +205,18 @@ svg
 
 .brief-container
 {
+    font-family: 'Open Sans', sans-serif;
     width: 45vw;
     height: 45vh;
     position: absolute;
-    bottom: 0vh;
-    left: 7vw;
+    top:10vh;
+    left: 50px;
     color: white;
     font-size:14px;
-    background-color:black;
+    background-color:transparent;
     line-height: 1.8em;
     border-radius: 5px;
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 .brief-container .inner
@@ -223,9 +224,9 @@ svg
     padding: 30px 30px 0 30px;
 }
 
-.brief-container h1
+.brief-container h2
 {
-    font-size: 54px;
+    font-size: 30px;
 }
 
 .description-container
@@ -282,7 +283,7 @@ svg
     position: absolute;
     background-color: #ffffff;
     font-size: 10px;
-    padding: 0 15px 0 5px;
+    padding: 5px 15px 5px 15px;
     margin-top: 120px;
     margin-left: 30px;
     border-radius: 4px;
@@ -298,4 +299,10 @@ svg
 #result
 {
     color:green;
+}
+
+
+h1,h2,h3,h4,h5,h6
+{
+    font-family: 'Open Sans', sans-serif;
 }
