--- a/css/style.css
+++ b/css/style.css
@@ -153,8 +153,15 @@ svg
 #content{font-size: 15px; color:grey;}
 
 
-#summary{
-    text-align: left; font-size: 20px; line-height: 1.8em; color:#333; padding-left: 25px; padding-right: 25px;
+.summary{
+    font-size: 16px;
+    line-height: 1.8em;
+    color:#666666;
+    padding-left: 25px;
+    padding-right: 25px;
+    width:70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .msg
@@ -197,12 +204,6 @@ svg
 }
 
 
-.description
-{
-    background-color:#eeeeee;
-}
-
-
 .brief-container
 {
     font-family: 'Open Sans', sans-serif;
@@ -229,15 +230,56 @@ svg
     font-size: 30px;
 }
 
+
+
+
+.description
+{
+    background-color: transparent;
+}
+
 .description-container
 {
     padding-top:50px;
-    width: 70%;
     margin-left:auto;
     margin-right:auto;
     padding-bottom: 100px;
+    margin-bottom: 50px;
 
 }
+
+.description-container h2
+{
+    color: #FF6600;
+    font-weight: 600;
+}
+
+.description-container h3
+{
+    font-size: 22px;
+}
+
+.description .thumbnail
+{
+    border:none;
+    background-color: transparent;
+}
+
+.image-container
+{
+    height: 220px;
+}
+
+.description #die
+{
+    height:170px;
+}
+
+.description #money
+{
+    height:170px;
+}
+
 
 .brief-container a:link
 {
