--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 body
 {
     font-family: 'Open Sans', sans-serif;
+    overflow-x:hidden ;
 }
 
 .wrapper
@@ -311,3 +312,4 @@ h1,h2,h3,h4,h5,h6
 {
     font-family: 'Open Sans', sans-serif;
 }
+
