--- a/css/style.css
+++ b/css/style.css
@@ -53,12 +53,39 @@ height: 200px;
 }
 
 
-.map
-{
-    width: 100%;
-    height: 100vh;
-    min-height: 350px;
+
+
+@media (max-width: 780px) {
+    .map
+    {
+        width: 100%;
+        height: 700px;
+        min-height: 350px;
+    }
 }
+
+@media (min-width: 781px) and (max-width: 1400px)
+{
+    .map
+    {
+        width: 100%;
+        height: 700px;
+        min-height: 350px;
+    }
+}
+
+
+@media (min-width: 1401px) and (max-width: 1700px)
+{
+    .map
+    {
+        width: 100%;
+        height: 1000px;
+        min-height: 350px;
+    }
+}
+
+
 
 #map
 {
