--- a/css/style.css
+++ b/css/style.css
@@ -397,3 +397,19 @@ h1,h2,h3,h4,h5,h6
 .map-container{
     max-height:650px;
 }
+
+
+.footer
+{
+    margin-top:100px;
+    width: 100%;
+    height: 50px;
+    background-color: #3C3C3C;
+}
+
+.footer p
+{
+    color:white;
+    font-size: 12px;
+    padding-top:15px;
+}
